--- a/KID.WPF.IDE/Views/CodeEditorsView.xaml
+++ b/KID.WPF.IDE/Views/CodeEditorsView.xaml
@@ -66,11 +66,22 @@
         
         <!-- Панель вкладок -->
         <Border Grid.Row="0"
-                Background="{DynamicResource TabBarBackgroundBrush}"
-                Padding="7,5,2,0">
-            <ScrollViewer HorizontalScrollBarVisibility="Auto"
+                Background="{DynamicResource TabBarBackgroundBrush}">
+            <Border.Style>
+                <Style TargetType="Border">
+                    <Setter Property="Padding" Value="7,5,2,0"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=TabScrollViewer, Path=ComputedHorizontalScrollBarVisibility}" Value="Visible">
+                            <Setter Property="Padding" Value="7,0,2,0"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+            <ScrollViewer x:Name="TabScrollViewer"
+                          HorizontalScrollBarVisibility="Auto"
                           VerticalScrollBarVisibility="Disabled"
-                          CanContentScroll="False">
+                          CanContentScroll="False"
+                          Padding="0,0,0,0">
                 <ScrollViewer.Resources>
                     <Style x:Key="ThinTabScrollThumbStyle" TargetType="Thumb">
                         <Setter Property="Background" Value="{DynamicResource WindowBrush}"/>
@@ -79,6 +90,48 @@
                                 <ControlTemplate TargetType="Thumb">
                                     <Border Background="{TemplateBinding Background}"
                                             CornerRadius="2"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                    <Style TargetType="ScrollViewer">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ScrollViewer">
+                                    <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                        <ScrollBar x:Name="PART_HorizontalScrollBar"
+                                                   Grid.Row="0"
+                                                   Grid.Column="0"
+                                                   Orientation="Horizontal"
+                                                   Maximum="{TemplateBinding ScrollableWidth}"
+                                                   ViewportSize="{TemplateBinding ViewportWidth}"
+                                                   Value="{TemplateBinding HorizontalOffset}"
+                                                   Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
+                                        <ScrollContentPresenter x:Name="PART_ScrollContentPresenter"
+                                                                Grid.Row="1"
+                                                                Grid.Column="0"
+                                                                CanContentScroll="{TemplateBinding CanContentScroll}"
+                                                                Content="{TemplateBinding Content}"
+                                                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                                ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                                                Margin="{TemplateBinding Padding}"/>
+                                        <ScrollBar x:Name="PART_VerticalScrollBar"
+                                                   Grid.Row="1"
+                                                   Grid.Column="1"
+                                                   Orientation="Vertical"
+                                                   Maximum="{TemplateBinding ScrollableHeight}"
+                                                   ViewportSize="{TemplateBinding ViewportHeight}"
+                                                   Value="{TemplateBinding VerticalOffset}"
+                                                   Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"/>
+                                    </Grid>
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
