--- a/KID.WPF.IDE/Views/CodeEditorsView.xaml
+++ b/KID.WPF.IDE/Views/CodeEditorsView.xaml
@@ -8,7 +8,8 @@
              xmlns:di="clr-namespace:KID.Services.DI"
              xmlns:models="clr-namespace:KID.Models"
              xmlns:converters="clr-namespace:KID.Converters"
-             xmlns:localization="clr-namespace:KID.Services.Localization">
+             xmlns:localization="clr-namespace:KID.Services.Localization"
+             xmlns:roslyn="clr-namespace:RoslynPad.Editor;assembly=RoslynPad.Editor.Windows">
     
     <UserControl.DataContext>
         <di:ServiceProviderExtension ServiceType="{x:Type viewModelsInterfaces:ICodeEditorsViewModel}" />
@@ -17,6 +18,12 @@
     <UserControl.Resources>
         <converters:EqualityToBoolConverter x:Key="EqualityToBoolConverter" />
         <Style TargetType="avalonedit:TextEditor">
+            <Setter Property="Background" Value="{DynamicResource EditorBackgroundBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource EditorForegroundBrush}"/>
+            <Setter Property="FontFamily" Value="{Binding DataContext.FontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+            <Setter Property="FontSize" Value="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+        </Style>
+        <Style TargetType="roslyn:RoslynCodeEditor">
             <Setter Property="Background" Value="{DynamicResource EditorBackgroundBrush}"/>
             <Setter Property="Foreground" Value="{DynamicResource EditorForegroundBrush}"/>
             <Setter Property="FontFamily" Value="{Binding DataContext.FontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
